--- a/kbUDPserver/kbUDPserver.vcxproj
+++ b/kbUDPserver/kbUDPserver.vcxproj
@@ -139,6 +139,9 @@
       <DeploymentContent>true</DeploymentContent>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="KbShowTickersStatuses.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
