all done except end time event handler

--- a/kbUDP/kbUDP.vcxitems.filters
+++ b/kbUDP/kbUDP.vcxitems.filters
@@ -27,6 +27,7 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)KbTickerReceivers.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)KbTickers.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)KbShowTickersStatuses.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="$(MSBuildThisFileDirectory)KbUDPPacketsDescription.txt">
